# fract

./: CMakeLists.txt  Makefile  compile.sh
include/: fractol.h
libft/: Makefile
libft/ft_str/: ft_strsplit.c
libft/include/: libft.h
libft/other/: ft_counterwords.c
src/: main.c
