cmake_minimum_required(VERSION 3.17)
project(fract C)

set(CMAKE_C_STANDARD 11)

include_directories(libft/include)

set(CMAKE_C_FLAGS "-O3 -ffast-math -I /usr/local/include -L /usr/local/lib -lmlx -framework OpenGL -framework AppKit")

add_executable(fract
        libft/ft_is/ft_isalnum.c
        libft/ft_is/ft_isalpha.c
        libft/ft_is/ft_isascii.c
        libft/ft_is/ft_isdigit.c
        libft/ft_is/ft_isprint.c
        libft/ft_lst/ft_lstadd_back.c
        libft/ft_lst/ft_lstadd_front.c
        libft/ft_lst/ft_lstclear.c
        libft/ft_lst/ft_lstdelone.c
        libft/ft_lst/ft_lstiter.c
        libft/ft_lst/ft_lstlast.c
        libft/ft_lst/ft_lstmap.c
        libft/ft_lst/ft_lstnew.c
        libft/ft_lst/ft_lstsize.c
        libft/ft_mem/ft_memalloc.c
        libft/ft_mem/ft_memccpy.c
        libft/ft_mem/ft_memchr.c
        libft/ft_mem/ft_memcmp.c
        libft/ft_mem/ft_memcpy.c
        libft/ft_mem/ft_memdel.c
        libft/ft_mem/ft_memmove.c
        libft/ft_mem/ft_memset.c
        libft/ft_put/ft_putchar.c
        libft/ft_put/ft_putchar_fd.c
        libft/ft_put/ft_putendl.c
        libft/ft_put/ft_putendl_fd.c
        libft/ft_put/ft_putnbr.c
        libft/ft_put/ft_putnbr_fd.c
        libft/ft_put/ft_putstr.c
        libft/ft_put/ft_putstr_fd.c
        libft/ft_str/ft_strcat.c
        libft/ft_str/ft_strchr.c
        libft/ft_str/ft_strchrn.c
        libft/ft_str/ft_strchrnor.c
        libft/ft_str/ft_strclr.c
        libft/ft_str/ft_strcmp.c
        libft/ft_str/ft_strcpy.c
        libft/ft_str/ft_strdel.c
        libft/ft_str/ft_strdup.c
        libft/ft_str/ft_strdup_prot.c
        libft/ft_str/ft_strequ.c
        libft/ft_str/ft_striter.c
        libft/ft_str/ft_striteri.c
        libft/ft_str/ft_strjoin.c
        libft/ft_str/ft_strjoin_free.c
        libft/ft_str/ft_strjoinoneletter.c
        libft/ft_str/ft_strlcat.c
        libft/ft_str/ft_strlen.c
        libft/ft_str/ft_strlen_prot.c
        libft/ft_str/ft_strmap.c
        libft/ft_str/ft_strmapi.c
        libft/ft_str/ft_strncat.c
        libft/ft_str/ft_strncmp.c
        libft/ft_str/ft_strncpy.c
        libft/ft_str/ft_strnequ.c
        libft/ft_str/ft_strnew.c
        libft/ft_str/ft_strnstr.c
        libft/ft_str/ft_strrchr.c
        libft/ft_str/ft_strreverse.c
        libft/ft_str/ft_strsplit.c
        libft/ft_str/ft_strstr.c
        libft/ft_str/ft_strsub.c
        libft/ft_str/ft_strtolower.c
        libft/ft_str/ft_strtoupper.c
        libft/ft_str/ft_strtrim.c
        libft/ft_to/ft_atoi.c
        libft/ft_to/ft_bzero.c
        libft/ft_to/ft_itoa.c
        libft/ft_to/ft_itoa_base.c
        libft/ft_to/ft_tolower.c
        libft/ft_to/ft_toupper.c
        libft/ft_to/ft_tozero2.c
        libft/ft_to/ft_tozero2_int.c
        libft/ft_to/ft_tozero3.c
        libft/ft_to/ft_tozero3_int.c
        libft/ft_to/ft_tozero4.c
        libft/ft_to/ft_tozero4_int.c
        libft/include/big_int.h
        libft/include/ft_printf.h
        libft/include/libft.h
        libft/other/ft_abs.c
        libft/other/ft_copyword.c
        libft/other/ft_counterwords.c
        libft/other/ft_countw.c
        libft/other/ft_lengthcounter.c
        libft/other/ft_longover.c
        libft/other/ft_power.c
        libft/other/ft_whatismyint.c
        libft/src_ftprintf/f_bigint1.c
        libft/src_ftprintf/f_bigint2.c
        libft/src_ftprintf/f_counter1.c
        libft/src_ftprintf/f_counter2.c
        libft/src_ftprintf/f_round.c
        libft/src_ftprintf/f_tochar1.c
        libft/src_ftprintf/f_tochar2.c
        libft/src_ftprintf/f_util.c
        libft/src_ftprintf/f_util2.c
        libft/src_ftprintf/ft_printf.c
        libft/src_ftprintf/manage_buffer.c
        libft/src_ftprintf/manage_csper.c
        libft/src_ftprintf/manage_d.c
        libft/src_ftprintf/manage_f.c
        libft/src_ftprintf/manage_o.c
        libft/src_ftprintf/manage_p.c
        libft/src_ftprintf/manage_u.c
        libft/src_ftprintf/manage_x.c
        libft/src_ftprintf/parser.c
        libft/src_ftprintf/utils.c
        libft/get_next_line.c
        src/main.c include/fractol.h)
